--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,7 +55,7 @@
 </ul>
 
 <h2>Add a Burger</h2>
-<form class="create-update-form" action="/" method="POST">
+<form class="create-update-form" action="/api/addburger" method="POST">
 
   <div class="form-group">
     <label for="bn">Burger Name:</label>
