--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,11 +20,11 @@
       <li>
         {{this.id}}. {{this.burger_name}}
 
-        <form action="/{{this.id}}?_method=PUT" method="POST">
+        <form action="//api/update/{{this.id}}" method="POST">
           <input type="hidden" name="devoured" value="true">
           <button class="btn btn-primary" type="submit">EAT THIS BURGER NOW!</button>
         </form>
-        <form action="/{{this.id}}?_method=DELETE" method="POST">
+        <form action="/api/delete/{{this.id}}" method="POST">
           <input type="hidden" name="id" value="{{this.id}}">
           <button class="btn btn-danger" type="submit">DELETE this burger!</button>
         </form>
@@ -41,11 +41,11 @@
       <li>
         {{this.id}}. {{this.burger_name}}
 
-        <form action="/{{this.id}}?_method=PUT" method="POST">
+        <form action="/api/update/{{this.id}}" method="POST">
           <input type="hidden" name="devoured" value="false">
           <button class="btn btn-primary type="submit">PUT BURGER BACK ON MENU!</button>
         </form>
-        <form action="/{{this.id}}?_method=DELETE" method="POST">
+        <form action="/api/delete/{{this.id}}" method="POST">
           <input type="hidden" name="id" value="{{this.id}}">
           <button class="btn btn-danger" type="submit">DELETE this burger!</button>
         </form>
