Added Validation Error

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ li {
 .create-update-form {
     padding: 5px;
     margin: 5px;
-    background: aqua;
+    background: #f7e8bb;
 }
 
 .form-group {
