--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,7 +45,7 @@
                   <div>
                     <h3>{{inc @index}}. {{this.burger_name}}</h3>
 
-                    {{#if customers}}
+                    {{#if ../customers}}
                         <form action="/api/update/{{this.id}}" method="POST">
                           <input type="hidden" name="devoured" value="true">
 
@@ -54,8 +54,8 @@
 
                             <select class="form-control" id="customer" required="required" aria-required="true" style="width: 300px">
                               <option value="" disabled selected>Select a hungry customer</option>
-                              {{#each customers}}
-                                  <option name="hungrycustomer" value={{customer.id}}>{{customers.customer_name}}</option>
+                              {{#each ../customers}}
+                                  <option name="hungrycustomer" value={{../customers.id}}>{{../customers.customer_name}}</option>
                               {{/each}}
                             </select>
 
