Almost Working Select Option

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -51,7 +51,7 @@
 
                           <div class="form-group">
                             <label for="category">Select Customer To Eat Burger:</label>
-
+            {{../customers}}
                             <select class="form-control" id="customer" required="required" aria-required="true" style="width: 300px">
                               <option value="" disabled selected>Select a hungry customer</option>
                               {{#each ../customers}}
