--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -112,7 +112,7 @@
                       <input type="hidden" name="devoured" value="false">
                       <button class="btn btn-primary" type="submit">PUT BURGER BACK ON MENU!</button>
                     </form>
-                    <form action="/api/delete/{{this.id}}" method="POST">
+                    <form action="/api/deleteburger/{{this.id}}" method="POST">
                       <input type="hidden" name="id" value="{{this.id}}">
                       <button class="btn btn-danger" type="submit">DELETE this burger!</button>
                     </form>
